deploy/k8s/base/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app.kubernetes.io/component: traefik
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
